[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/arena/Building.gd" type="Script" id=1]
[ext_resource path="res://assets/images/buildings/old_gate_building_3_top.png" type="Texture" id=2]
[ext_resource path="res://assets/images/buildings/old_gate_building_3_bottom.png" type="Texture" id=3]
[ext_resource path="res://assets/images/white_pixel.png" type="Texture" id=4]

[node name="Building" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Foreground" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="BuildingArea" type="Area2D" parent="." groups=["building_area"]]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BuildingArea"]
polygon = PoolVector2Array( -410, -534, 410.985, -534, 411.081, 534, -411.107, 534 )

[node name="Perimeter" type="Area2D" parent="." groups=["building_perimeter"]]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Perimeter"]
build_mode = 1
polygon = PoolVector2Array( -430.553, -554, 430, -554, 430, 554, -430, 554 )

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
light_mask = 0
scale = Vector2( 1000, 1000 )
enabled = false
texture = ExtResource( 4 )
energy = 0.0
mode = 3
range_layer_max = 2
range_item_cull_mask = 16

[connection signal="body_entered" from="BuildingArea" to="." method="_on_BuildingArea_body_entered"]
[connection signal="body_exited" from="BuildingArea" to="." method="_on_BuildingArea_body_exited"]
[connection signal="body_entered" from="Perimeter" to="." method="_on_Perimeter_body_entered"]
[connection signal="body_exited" from="Perimeter" to="." method="_on_Perimeter_body_exited"]
